--- a/44AI.html
+++ b/44AI.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>44AI by SoundSynths</title>
+    <title>44AI</title>
     <style>
         * {
             margin: 0;
@@ -136,7 +136,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">44AI by SoundSynths</h1>
+        <h1 class="logo">44AI</h1>
     </header>
     <section class="controls">
         <div class="control-buttons">
