--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
         <h1>Sound Synths</h1>
         <a href="http://soundsynths.netlify.app/mythicalsynth.html" title="Mythical Synth" class="menu-item"> Mythical Synth</a>
         <a href="http://soundsynths.netlify.app/dronesynth.html" title="Drone Synth" class="menu-item">Drone Synth</a>
-        <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI Synth" class="menu-item">808AI Synth</a>
         <a href="http://soundsynths.netlify.app/cloudsynth.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
+        <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI" class="menu-item">808AI</a>
+        <a href="http://soundsynths.netlify.app/44AI.html" title="44AI" class="menu-item">44AI</a>
         <a href="http://soundsynths.netlify.app/about.html" title="About" class="menu-item">About Sound Synths</a>
         <div class="glow-effect"></div>
     </div>
