--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,10 @@
             transform-origin: center top;
             width: 117.65%; /* 100% / 0.85 to compensate scaling */
             max-width: 100vw;
-            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
 
         /* Sound Wave Background */
@@ -97,6 +100,7 @@
             perspective: 1000px;
             z-index: 1;
             text-align: center;
+            margin: 0 auto;
         }
 
         /* 3D Glowing Logo */
@@ -111,6 +115,7 @@
             margin-bottom: 2.5rem;
             transform: translateZ(20px);
             animation: flicker 4s infinite;
+            -webkit-animation: flicker 4s infinite; /* Safari support */
         }
 
         @keyframes flicker {
@@ -138,7 +143,7 @@
             box-shadow: 
                 0 0 15px rgba(0, 255, 255, 0.3),
                 0 0 30px rgba(0, 255, 255, 0.2);
-            touch-action: manipulation; /* Improves mobile touch */
+            touch-action: manipulation;
         }
 
         .menu-item:hover {
@@ -168,16 +173,19 @@
         footer {
             position: relative;
             margin-top: 2.5rem;
-            padding: 1.25rem;
+            padding: 1.5rem;
             width: 100%;
             text-align: center;
             color: #00ffff;
             font-size: 0.9rem;
             text-shadow: 0 0 10px #00ffff;
+            z-index: 1;
+            background: rgba(0, 0, 0, 0.3); /* Slight background for contrast */
+            min-height: 60px; /* Ensure visibility */
         }
 
         footer p {
-            margin: 0;
+            margin: 0.5rem 0;
         }
 
         footer a {
@@ -205,8 +213,9 @@
                 max-width: 90%;
             }
             footer {
-                font-size: 0.8rem;
-                padding: 0.9375rem;
+                font-size: 0.85rem;
+                padding: 1.25rem;
+                min-height: 70px;
             }
         }
 
@@ -217,6 +226,11 @@
             .menu-item {
                 font-size: 0.8rem;
                 padding: 0.75rem;
+            }
+            footer {
+                font-size: 0.8rem;
+                padding: 1rem;
+                min-height: 80px;
             }
         }
     </style>
