--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://soundsynths.netlify.app/">
     <meta property="og:image" content="http://soundsynths.netlify.app/assets/og-image.jpg">
-    <meta property="og:site_name" content="Sound Synths">
+    <meta property="ong:site_name" content="Sound Synths">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sound Synths - Retro Synthesizers for Music Creators">
     <meta name="twitter:description" content="Retro-inspired synths for bedroom producers and sound creators. Explore mythical, drone, and cloud synths.">
@@ -53,7 +53,8 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            padding-bottom: 0.5rem;
+            padding-top: 2rem; /* Space above logo */
+            padding-bottom: 0.2rem; /* Minimal space below menu */
         }
 
         .soundwave-bg {
@@ -101,7 +102,7 @@
                 0 0 10px #ff00ff,
                 0 0 20px #00ffff,
                 0 0 30px #ff00ff;
-            margin-bottom: 2.5rem;
+            margin-bottom: 1.5rem; /* Reduced for one-view */
             transform: translateZ(20px);
             animation: flicker 4s infinite;
             -webkit-animation: flicker 4s infinite;
@@ -114,7 +115,7 @@
 
         .menu-item {
             position: relative;
-            margin: 0.9375rem 0;
+            margin: 0.5rem 0; /* Reduced for one-view */
             padding: 1.25rem;
             background: rgba(255, 255, 255, 0.05);
             border: 2px solid #00ffff;
@@ -158,8 +159,8 @@
 
         footer {
             position: relative;
-            margin-top: 1rem;
-            padding: 1.5rem;
+            margin-top: 0.5rem; /* Tighter spacing to menu */
+            padding: 1rem; /* Reduced for one-view */
             width: 100%;
             text-align: center;
             color: #00ffff;
@@ -167,7 +168,7 @@
             text-shadow: 0 0 10px #00ffff;
             z-index: 1;
             background: rgba(0, 0, 0, 0.3);
-            min-height: 60px;
+            min-height: 50px; /* Reduced for one-view */
         }
 
         footer p {
@@ -175,39 +176,49 @@
         }
 
         @media (max-width: 768px) {
+            .ui-scale-wrapper {
+                padding-top: 1.5rem; /* Adjusted for mobile */
+                padding-bottom: 0.1rem;
+            }
             h1 {
                 font-size: 1.8rem;
-                margin-bottom: 1.875rem;
+                margin-bottom: 1.2rem;
             }
             .menu-item {
                 font-size: 0.9rem;
                 padding: 0.9375rem;
-                margin: 0.625rem 0;
+                margin: 0.4rem 0;
             }
             .menu-container {
                 max-width: 90%;
             }
             footer {
                 font-size: 0.85rem;
-                padding: 1.25rem;
-                min-height: 70px;
-                margin-top: 0.75rem;
+                padding: 0.8rem;
+                min-height: 60px;
+                margin-top: 0.3rem; /* Tighter on mobile */
             }
         }
 
         @media (max-width: 480px) {
+            .ui-scale-wrapper {
+                padding-top: 1rem;
+                padding-bottom: 0.1rem;
+            }
             h1 {
                 font-size: 1.5rem;
+                margin-bottom: 1rem;
             }
             .menu-item {
                 font-size: 0.8rem;
                 padding: 0.75rem;
+                margin: 0.3rem 0;
             }
             footer {
                 font-size: 0.8rem;
-                padding: 1rem;
-                min-height: 80px;
-                margin-top: 0.5rem;
+                padding: 0.6rem;
+                min-height: 50px;
+                margin-top: 0.2rem; /* Tightest on small screens */
             }
         }
     </style>
