--- a/44AI.html
+++ b/44AI.html
@@ -175,7 +175,7 @@
         <canvas id="waveform"></canvas>
     </section>
     <footer>
-        <p>© 2025 SoundSynths. The Ultimate 4/4 Electronic Music Studio.</p>
+        <p>© 2025 SoundSynths. All Rights Reserved.</p>
     </footer>
     <script>
         // Web Audio API Setup
