--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
             <a href="http://soundsynths.netlify.app/cloudsynth.html" title="Cloud Synth" class="menu-item">Cloud Synth</a>
             <a href="http://soundsynths.netlify.app/808AI4.html" title="808AI" class="menu-item">808AI</a>
             <a href="http://soundsynths.netlify.app/44AI.html" title="44AI" class="menu-item">44AI</a>
-            <a href="http://soundsynths.netlify.app/rain.html" title="Rainfall Noise Simulator" class="menu-item">Rainfall Simulator</a>
+            <a href="http://soundsynths.netlify.app/rain.html" title="Rainfall Noise Simulator" class="menu-item">Rainfall Noise Simulator</a>
+            <a href="http://soundsynths.netlify.app/spacenoisegen.html" title="Space Noise Simulator" class="menu-item">Space Noise Simulator</a>
             <a href="http://soundsynths.netlify.app/about.html" title="About Sound Synths" class="menu-item">About Sound Synths</a>
             <div class="glow-effect"></div>
         </div>
