--- a/spacenoisegen.html
+++ b/spacenoisegen.html
@@ -142,7 +142,7 @@
             </div>
         </div>
         <button id="playPause" aria-label="Play or pause audio">Play</button>
-        <div class="copyright">© 2025 Space Sound Generator</div>
+        <div class="copyright">© 2025 Soundsynths</div>
     </div>
 
     <script>
